<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/amountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amt" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amtHint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/numView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax" />

    <EditText
        android:id="@+id/editNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numPax"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/ToggleSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/T1"
            android:textOn="@string/T1_1" />

        <ToggleButton
            android:id="@+id/ToggleGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/T2"
            android:textOn="@string/T2_1" />

    </LinearLayout>

    <TextView
        android:id="@+id/discountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dis" />

    <EditText
        android:id="@+id/editDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/disc"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/radioGroupMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RAD1" />

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RAD2" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/B1" />

        <Button
            android:id="@+id/ButtonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/B2" />
    </LinearLayout>

    <TextView
        android:id="@+id/TotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/EachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

</LinearLayout>